--- a/assets/package.json
+++ b/assets/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "packageManager": "npm@8.3.0",
   "scripts": {
     "deploy": "webpack --mode production",
     "watch": "webpack --mode development --watch"
@@ -10,7 +11,7 @@
     "bootstrap": "4.6.1"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^9.0.0",
+    "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.0",
     "glob": "^7.2.0",
